--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,20 @@
 <body>
 <p class="notice"><%= notice %></p>
 <p class="alert"><%= alert %></p>
-
+<%if(user_signed_in?)%>
+	
+	<%=current_user.nombre%> <%=current_user.apellido%> |
+	<%=link_to "Cerrar Sesión", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
+	<%if(current_user.provider.blank?)%>
+		<%=link_to "Mi perfil", user_edit_path(current_user.id), :class => 'navbar-link'  %>
+		
+	<%else%>	
+		<%=link_to "Mi perfil", edit_user_registration_path, :class => 'navbar-link'  %>
+	<%end%>
+<%else%>
+	<%= link_to "Registrarse", new_user_registration_path, :class => 'navbar-link'  %> |
+	<%= link_to "Iniciar Sesión", new_user_session_path, :class => 'navbar-link'  %>
+<%end%>
 <%= yield %>
 
 </body>
