--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -45,7 +45,7 @@
   </div>
   <div class="field">
     <%= f.label 'Fecha de nacimiento' %><br />
-    <%= f.date_field :fecha_nacimiento, autocomplete: "off" %>
+    <%= f.date_field :fecha_nacimiento, class: "datepicker" %>
   </div>
   <div class="field">
     <%= f.label 'Sexo' %><br />
@@ -77,8 +77,9 @@
   </div>
 <% end %>
 
-<h3>Cancelar mi inscripción</h3>
+<h5>Cancelar mi inscripción</h5>
 
 <p>Quiere abandonar el sistema? <%= button_to "Cancelar mi cuenta", registration_path(resource_name), data: { confirm: "Esta usted seguro?" }, method: :delete %></p>
 
 <%= link_to "Volver", :back %>
+
