--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -35,16 +35,20 @@
   </div>
   <div class="field">
     <%= f.label 'Fecha de nacimiento' %>
-    <%= f.date_field :fecha_nacimiento, autocomplete: "off" %>
+    <%= f.date_field :fecha_nacimiento, class: "datepicker"%>
   </div>
   <div class="field">
-    <%= f.label 'Sexo *' %>
-    <%select_list = [ 'masculino', 'femenino' ]%>
-    <%= f.select :sexo, select_list%>
+    
+    <%= f.label 'Sexo' %><br />
+    <%= f.text_field :sexo, autocomplete: "off" %>
   </div>
   <div class="field">
     <%= f.label 'Hincha de' %>
     <%= f.text_field :hincha, autocomplete: "off" %>
+  </div>
+  <div class="field">
+    <%= f.label 'Teléfono' %>
+    <%= f.text_field :telefono, autocomplete: "off" %>
   </div>
   <div class="field">
     <%= f.label 'Localidad' %>
