--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,4 @@
 <h1>Mi Perfil</h1>
-
 <%= form_for @user, :url => user_update_path(@user.id), :method => :POST  do |f| %> 
  
   <div class="field">
@@ -8,7 +7,7 @@
   </div>
   <div class="field">
     <%= f.label 'Apellido *' %>
-    <%= f.text_field :apellido, autocomplete: "off" %>
+    <%= f.text_field :apellido, class: "datepicker" %>
   </div>
   <div class="field">
     <%= f.label 'Apodo *' %>
@@ -16,12 +15,11 @@
   </div>
   <div class="field">
     <%= f.label 'Fecha de nacimiento *' %>
-    <%= f.date_field :fecha_nacimiento, autocomplete: "off" %>
+    <%= f.date_field :fecha_nacimiento, class: "datepicker"%>
   </div>
   <div class="field">
-    <%= f.label 'Sexo *' %>
-    <%select_list = [ 'masculino', 'femenino' ]%>
-    <%= f.select :sexo, select_list%>
+    <%= f.label 'Sexo' %><br />
+    <%= f.text_field :sexo, autocomplete: "off" %>
   </div>
   <div class="field">
     <%= f.label 'Hincha de *' %>
@@ -53,3 +51,4 @@
   </div>
 
 <% end %>
+
